@@ -449,6 +449,7 @@ void SusyNtMaker::fillEventVars()
   evt->wPileup          = m_isMC? getPileupWeight() : 1;
   evt->wPileupAB3       = m_isMC? getPileupWeightAB3() : 1;
   evt->wPileupAB        = m_isMC? getPileupWeightAB() : 1;
+  evt->wPileupIL        = m_isMC? getPileupWeightIL() : 1;
   evt->xsec             = m_isMC? getXsecWeight() : 1;
   //evt->lumiSF           = m_isMC? getLumiWeight() : 1;             
   evt->sumw             = m_isMC? m_sumw : 1;
