@@ -157,6 +157,7 @@ class SusyD3PDAna : public SusyD3PDInterface
     float getPileupWeightAB3();
     // pileup weight for A-B (5.83/fb)
     float getPileupWeightAB();
+    float getPileupWeightIL();
     // PDF reweighting of 7TeV -> 8TeV
     float getPDFWeight8TeV();
 
@@ -297,6 +298,7 @@ class SusyD3PDAna : public SusyD3PDInterface
     Root::TPileupReweighting*   m_pileup;       // pileup reweighting
     Root::TPileupReweighting*   m_pileupAB3;    // pileup reweighting for 2012 A-B3 only
     Root::TPileupReweighting*   m_pileupAB;     // pileup reweighting for 2012 A-B
+    Root::TPileupReweighting*   m_pileupIL;     // pileup reweighting for 2012 I,L (NOT A RANGE)
 
     // The SUSY CrossSectionDB has its own map for retrieving xsec info, but
     // it has a lot of entries so lookup is slow.  Save our own xsec map
